--- a/QuickNotes/Scenes/Notes List/Base.lproj/Main.storyboard
+++ b/QuickNotes/Scenes/Notes List/Base.lproj/Main.storyboard
@@ -97,7 +97,7 @@
             </objects>
             <point key="canvasLocation" x="-737" y="134"/>
         </scene>
-        <!--Note Editor View Controller-->
+        <!--Title-->
         <scene sceneID="IkA-oG-1hV">
             <objects>
                 <viewController storyboardIdentifier="QNNoteEditorViewController" id="gwe-00-4Nq" customClass="QNNoteEditorViewController" sceneMemberID="viewController">
@@ -106,7 +106,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8kl-cm-3MN">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -116,19 +116,32 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="8kl-cm-3MN" firstAttribute="leading" secondItem="eli-TB-woU" secondAttribute="leading" id="B1r-Fo-ZbX"/>
-                            <constraint firstItem="8kl-cm-3MN" firstAttribute="top" secondItem="I31-FM-p3f" secondAttribute="top" id="Fa2-pM-JoR"/>
+                            <constraint firstItem="8kl-cm-3MN" firstAttribute="top" secondItem="I31-FM-p3f" secondAttribute="top" constant="64" id="Fa2-pM-JoR"/>
                             <constraint firstItem="8kl-cm-3MN" firstAttribute="bottom" secondItem="eli-TB-woU" secondAttribute="bottom" id="odP-qB-gRe"/>
                             <constraint firstItem="8kl-cm-3MN" firstAttribute="trailing" secondItem="eli-TB-woU" secondAttribute="trailing" id="rgb-JK-LLx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="eli-TB-woU"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="kIW-pv-PjY">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="EYw-rC-Qy4">
+                            <connections>
+                                <action selector="backButtonPressed:" destination="gwe-00-4Nq" id="f4Y-Lg-9fh"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="3Go-cc-ghW">
+                            <connections>
+                                <action selector="doneButtonPressed:" destination="gwe-00-4Nq" id="1jK-8R-1pX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="textView" destination="8kl-cm-3MN" id="eqj-Ye-DkP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3AJ-ko-iqP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-22" y="134"/>
+            <point key="canvasLocation" x="-23.199999999999999" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
