--- a/QuickNotes/Scenes/Notes List/Base.lproj/Main.storyboard
+++ b/QuickNotes/Scenes/Notes List/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Yr-QC-otd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1474" y="134"/>
+            <point key="canvasLocation" x="-1786" y="134"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -77,25 +77,45 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3jE-2i-YGB">
+                                <rect key="frame" x="300" y="592" width="60" height="60"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon-Edit" translatesAutoresizingMaskIntoConstraints="NO" id="5Lm-vW-Urm">
+                                        <rect key="frame" x="10" y="10" width="40" height="40"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="5Lm-vW-Urm" secondAttribute="trailing" constant="10" id="0II-RY-iHa"/>
+                                    <constraint firstAttribute="bottom" secondItem="5Lm-vW-Urm" secondAttribute="bottom" constant="10" id="1S6-VJ-cAQ"/>
+                                    <constraint firstItem="5Lm-vW-Urm" firstAttribute="leading" secondItem="3jE-2i-YGB" secondAttribute="leading" constant="10" id="NdM-A1-dtr"/>
+                                    <constraint firstItem="5Lm-vW-Urm" firstAttribute="top" secondItem="3jE-2i-YGB" secondAttribute="top" constant="10" id="RG1-yZ-0Pd"/>
+                                    <constraint firstAttribute="width" constant="60" id="gnc-5j-ChR"/>
+                                    <constraint firstAttribute="height" constant="60" id="jQe-UT-LY3"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3jE-2i-YGB" secondAttribute="trailing" constant="15" id="D7N-mn-cDb"/>
                             <constraint firstItem="CxD-Xp-ogF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Drg-2A-2Vx"/>
                             <constraint firstItem="CxD-Xp-ogF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="HJV-6y-2sN"/>
                             <constraint firstItem="CxD-Xp-ogF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Iaf-aT-FE6"/>
                             <constraint firstItem="CxD-Xp-ogF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UFb-he-cJB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3jE-2i-YGB" secondAttribute="bottom" constant="15" id="svU-jY-yBj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="UG1-V2-tqt"/>
                     <connections>
+                        <outlet property="buttonBackgroundView" destination="3jE-2i-YGB" id="OUn-7x-vPC"/>
                         <outlet property="tableView" destination="CxD-Xp-ogF" id="HG2-mr-Ol3"/>
                         <segue destination="gwe-00-4Nq" kind="show" identifier="editNote" id="bHd-L7-mfK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-737" y="134"/>
+            <point key="canvasLocation" x="-1029" y="134"/>
         </scene>
         <!--Title-->
         <scene sceneID="IkA-oG-1hV">
@@ -144,4 +164,7 @@
             <point key="canvasLocation" x="-23.199999999999999" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Icon-Edit" width="21" height="21"/>
+    </resources>
 </document>
