--- a/QuickNotes/Scenes/Notes List/Base.lproj/Main.storyboard
+++ b/QuickNotes/Scenes/Notes List/Base.lproj/Main.storyboard
@@ -77,6 +77,20 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l2m-2Z-qrF">
+                                <rect key="frame" x="137.5" y="315.5" width="100" height="100"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="CTc-He-AFb">
+                                        <rect key="frame" x="31.5" y="31.5" width="37" height="37"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Aqc-u9-QPk"/>
+                                    <constraint firstAttribute="width" constant="100" id="mIg-A2-fgI"/>
+                                </constraints>
+                            </view>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3jE-2i-YGB">
                                 <rect key="frame" x="300" y="592" width="60" height="60"/>
                                 <subviews>
@@ -97,6 +111,8 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="l2m-2Z-qrF" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="3nz-bm-R8l"/>
+                            <constraint firstItem="l2m-2Z-qrF" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="7PX-Ny-iCF"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3jE-2i-YGB" secondAttribute="trailing" constant="15" id="D7N-mn-cDb"/>
                             <constraint firstItem="CxD-Xp-ogF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Drg-2A-2Vx"/>
                             <constraint firstItem="CxD-Xp-ogF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="HJV-6y-2sN"/>
@@ -108,6 +124,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="UG1-V2-tqt"/>
                     <connections>
+                        <outlet property="activityIndicatorView" destination="l2m-2Z-qrF" id="5hQ-ln-BdH"/>
                         <outlet property="buttonBackgroundView" destination="3jE-2i-YGB" id="OUn-7x-vPC"/>
                         <outlet property="tableView" destination="CxD-Xp-ogF" id="HG2-mr-Ol3"/>
                         <segue destination="gwe-00-4Nq" kind="show" identifier="editNote" id="bHd-L7-mfK"/>
